--- a/src/app/pages/execute-script/execute-script.component.html
+++ b/src/app/pages/execute-script/execute-script.component.html
@@ -1,2 +1,5 @@
+<p>
+  execute-script works!
+</p>
 <button mat-raised-button color="primary">Primary Button</button>
-<p class="fw-bold">ssss</p>
+<p>ssss</p>
