--- a/src/app/pages/execute-script/execute-script.component.html
+++ b/src/app/pages/execute-script/execute-script.component.html
@@ -1,5 +1,154 @@
-<p>
+<!-- <p>
   execute-script works!
 </p>
 <button mat-raised-button color="primary">Primary Button</button>
 <p>ssss</p>
+@if(src){
+
+  <img src="http://localhost:3000/image" height="100vh" class="w-auto">
+} -->
+<div class="card">
+  <div class="card-body">
+    <div class="d-flex justify-content-center w-100">
+    <!-- <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12"> -->
+      <mat-form-field class="example-full-width w-50" appearance="outline">
+          <mat-label>URL</mat-label>
+          <input matInput placeholder="Ex: https://feuji.com" [(ngModel)]="url" >
+      </mat-form-field>
+    <!-- </div> -->
+    <!-- <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12"> -->
+    <button mat-flat-button class="m-lg-1" [disabled]="!url" color="primary" type="submit" (click)="runCommand()">Excecute</button>
+    <!-- </div> -->
+    </div>
+      <div class="card">
+        <div class="crad-body">
+          @if(!isTestcaseExecuting){
+          <mat-tab-group mat-align-tabs="start">
+      
+            <mat-tab>
+               <ng-template mat-tab-label >
+                  <mat-icon >
+                     assignment
+                  </mat-icon>
+                  Updated Testcases
+               </ng-template>
+               <!-- Content1 -->
+                <div class="card">
+                  <div class="card-body">
+                    <div class="materialTableHeader">
+                      <div class="left">
+                         <ul class="header-buttons-left ms-0">
+                            <li class="tbl-search-box">
+                               <label for="search-input"><i class="material-icons search-icon">search</i></label>
+                               <input id="search-input" type="text" class="browser-default search-field" (keyup)="applyFilter($event)" #input>
+                            </li>
+                         </ul>
+                      </div>
+                      <div class="right h-81">
+                         <ul class="tbl-export-btn">
+                            <li class="tbl-header-btn">
+                               <button mat-icon-button class="col-blue" color="primary" matTooltip="Download XLSX" (click)="exportExcel()">
+                                <mat-icon>file_download</mat-icon>
+                              </button>
+                            </li>
+                         </ul>
+                      </div>
+                    </div>
+                    <div class="mat-elevation-z8 overflow-auto">
+                      <table mat-table [dataSource]="dataSource">
+                    
+                        <!-- Position Column -->
+                        <ng-container matColumnDef="testcaseid">
+                          <th mat-header-cell *matHeaderCellDef> TestcaseID </th>
+                          <td mat-cell *matCellDef="let element"> {{element.testcaseid}} </td>
+                        </ng-container>
+                    
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="testcasetitle">
+                          <th mat-header-cell *matHeaderCellDef> Testcase Title </th>
+                          <td mat-cell *matCellDef="let element"> {{element.testcasetitle}} </td>
+                        </ng-container>
+                    
+                        <!-- Weight Column -->
+                        <ng-container matColumnDef="description">
+                          <th mat-header-cell *matHeaderCellDef> Description </th>
+                          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                        </ng-container>
+                    
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="expectedoutcome">
+                          <th mat-header-cell *matHeaderCellDef> Expected outcome </th>
+                          <td mat-cell *matCellDef="let element"> {{element.expectedoutcome}} </td>
+                        </ng-container>
+      
+                        <!-- Weight Column -->
+                        <ng-container matColumnDef="postconditions">
+                          <th mat-header-cell *matHeaderCellDef> Post Condition </th>
+                          <td mat-cell *matCellDef="let element"> {{element.postconditions}} </td>
+                        </ng-container>
+                    
+                        <ng-container matColumnDef="teststeps">
+                          <th mat-header-cell *matHeaderCellDef> Steps </th>
+                          <td mat-cell *matCellDef="let element"> 
+                            @if(element?.teststeps?.length > 0){
+                              <!-- <mat-icon class="pointer-cursor">directions</mat-icon> -->
+                              <button class="badge-solid-blue rounded-circle" matTooltip="Click Here" (click)="openSteps(element.teststeps)">
+                                <mat-icon class="pointer-cursor">directions</mat-icon>
+                              </button>
+                            }
+                            @else{
+                              NA
+                            }
+                          </td>
+                        </ng-container>
+
+                        <!-- Symbol Column -->
+                        <ng-container matColumnDef="priority">
+                          <th mat-header-cell *matHeaderCellDef> Priority </th>
+                          <td mat-cell *matCellDef="let element"> 
+                            <span class="badge" [ngClass]="{'badge-solid-red':element.priority == 'High','badge-solid-purple':element.priority == 'Low','badge-solid-orange':element.priority == 'Medium'}">
+                              {{element.priority}}
+                            </span>
+                          </td>
+                        </ng-container>
+                    
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                      </table>
+                    
+                      <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="totalCount" [pageIndex]="0" [pageSize]="5"
+                                     showFirstLastButtons
+                                     aria-label="Select page of periodic elements">
+                      </mat-paginator>
+                    </div>              
+                  </div>
+                </div>
+            </mat-tab>
+      
+            <mat-tab >
+              <ng-template mat-tab-label>
+                <mat-icon >
+                    people
+                </mat-icon>
+                Updated Image
+              </ng-template>
+              <div class="card">
+                <div class="card-body d-flex justify-content-center">
+                  <img [src]="src">
+                </div>
+              </div>
+            </mat-tab>
+          </mat-tab-group>
+        }
+        @else{
+          <div class="d-flex justify-content-center">
+            <mat-progress-spinner color="primary" [diameter]="60" mode="indeterminate">
+            </mat-progress-spinner>
+          </div>
+        }
+        </div>
+      </div>
+
+  </div>
+</div>
+
