--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
-@import "../node_modules/@angular/material/prebuilt-themes/azure-blue.css"
+@import "../node_modules/@angular/material/prebuilt-themes/azure-blue.css";
+@import "../src/assets/scss/badgelistgroup.scss";
+@import "../src/assets/scss/tableheader.scss";
+
+body{
+    box-sizing: border-box;
+    background-color: #ECF0F4;
+}
